[package]
name = "axp20x"
version = "0.1.0"
edition = "2018"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "^0.2"
num_enum = { version = "0.5", default-features = false }
bitmask-enum = { version = "1.1.3", default-features = false }
