[package]
name = "axp20x"
version = "0.0.2"
edition = "2018"
categories = ["embedded", "hardware-support"]
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
description = "Rust driver for axp20x Power Management Unit"
repository = "https://github.com/pyaillet/axp20x-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "^1.0.0-rc.1"
num_enum = { version = "0.5", default-features = false }
bitmask-enum = { version = "1.1.3", default-features = false }

[features]
default = []
std = []
